# 2026-Core-Power-Delta-Task-Force-Omega

./: .gitignore  ENTRYFORM-working.md  ENTRYFORM.md  README.md  package-lock.json  package.json
.github/workflows/: build-agent-service.yml  docker-publish.yml
apps/df-agent-service/: .dockerignore  Dockerfile  README.md  dependencies.py  main.py  pyproject.toml
apps/df-agent-service/models/: compentency.py
apps/df-agent-service/repositories/: chroma.py
apps/df-agent-service/routers/: chat_router.py  index_router.py
apps/df-agent-service/services/: agent_service.py
apps/df-serializer-service/: Dockerfile  README.md  competencies-flat-schema.json  contenthub-flat-schema.json  main.py  pyproject.toml
apps/df-serializer-service/sample_data/: data.py
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css
apps/web/src/components/: BubbleChart.tsx  Chatbot.tsx  Quiz.tsx  QuizQuestions.tsx  TopicSummary.tsx  chaarts.tsx
