[project]
name = "df-agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.0",
    "fastapi[standard]>=0.135.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.14",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[tool.uv]
override-dependencies = [
    "onnxruntime<=1.21.1",
]
