[project]
name = "df-serializer-service"
version = "1.0.0"
description = "REST API serving serialized Sitecore documentation data in JSON format"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",      # for testing FastAPI endpoints
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uvicorn]
app = "main:app"
host = "0.0.0.0"
port = 8000
reload = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
